--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
+autopep8==1.4.4
 Click==7.0
 cycler==0.10.0
 decorator==4.4.0
 Flask==1.0.2
+Flask-Cors==3.0.7
 Frozen-Flask==0.15
+gunicorn==19.9.0
 itsdangerous==1.1.0
 Jinja2==2.10.1
 kiwisolver==1.1.0
@@ -10,6 +13,8 @@ MarkupSafe==1.1.1
 matplotlib==3.0.3
 networkx==2.3
 numpy==1.16.3
+pep8==1.7.1
+pycodestyle==2.5.0
 pyparsing==2.4.0
 PyQt5==5.12.1
 PyQt5-sip==4.19.15
